# gcolor2

./: .gitignore  ChangeLog  README.md  configure.ac
src/: Makefile.am  callbacks.c  callbacks.h  interface.c  interface.h  main.c
